SemanticAnalyzer/tests/fail/retorno_en_void.java
class A {
	static boolean methodb1 (Objeto o1, Objeto o2)
		var Objeto o3, o4;
		var String s1, s2;
	{}

	dynamic int methodi1() {}
}

class Objeto {
	static void main()
	{}

	dynamic int methodi1()
	{}

	dynamic void methodi2()
	{
		return 1;
	}
}
